<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addnewitem_drawable_NameOfItem"
                android:drawableStart="@drawable/ic_book_black_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_centerVertical="true"/>
            <EditText
                android:layout_width="match_parent"
                style="@style/FormEditTextStyle"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/addnewitem_drawable_NameOfItem"
                android:hint="@string/addNewItem_NameOfItem"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addnewitem_drawable_NameOfAuthor"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_toEndOf="@+id/addnewitem_drawable_NameOfAuthor"
                    android:id="@+id/addnewitem_edittext_NameOfAuthor"
                    android:hint="@string/addNewItem_NameOfAuthor"
                    android:layout_margin="10dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    style="@style/AppTheme.CustomButton"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="0dp"
                    android:layout_marginEnd="10dp"
                    android:drawableStart="@drawable/ic_add_white_36dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addnewitem_drawable_NameOfPainter"
                    android:drawableStart="@drawable/ic_mode_edit_black_24dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_toEndOf="@+id/addnewitem_drawable_NameOfPainter"
                    android:id="@+id/addnewitem_edittext_NameOfPainter"
                    android:hint="@string/addNewItem_Painter"
                    android:layout_margin="10dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    style="@style/AppTheme.CustomButton"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="0dp"
                    android:layout_marginEnd="10dp"
                    android:drawableStart="@drawable/ic_add_white_36dp"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addnewitem_drawable_PriceOfItem"
                android:drawableStart="@drawable/ic_book_black_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_centerVertical="true"/>
            <EditText
                android:layout_width="match_parent"
                style="@style/FormEditTextStyle"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_toEndOf="@+id/addnewitem_drawable_PriceOfItem"
                android:hint="@string/addNewItem_OriginalPrice"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addnewitem_drawable_Year"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_centerVertical="true"/>
            <EditText
                android:layout_width="match_parent"
                style="@style/FormEditTextStyle"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_toEndOf="@+id/addnewitem_drawable_Year"
                android:hint="@string/addNewItem_PublishingYear"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addnewitem_drawable_Isbn"
                android:drawableStart="@drawable/ic_format_align_left_black_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_centerVertical="true"/>
            <EditText
                android:layout_width="match_parent"
                style="@style/FormEditTextStyle"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_toEndOf="@+id/addnewitem_drawable_Isbn"
                android:hint="@string/addNewItem_Isbn"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addnewitem_drawable_Language"
                android:drawableStart="@drawable/ic_language_black_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_centerVertical="true"/>

            <Spinner
                android:id="@+id/addnewitem_languageSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/addnewitem_drawable_Language"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:entries="@array/languages" />

        </RelativeLayout>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addnewitem_drawable_Publisher"
                android:drawableStart="@drawable/ic_business_black_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_centerVertical="true"/>
            <EditText
                android:layout_width="match_parent"
                style="@style/FormEditTextStyle"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_toEndOf="@+id/addnewitem_drawable_Publisher"
                android:hint="@string/addNewItem_Publisher"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addnewitem_drawable_Edition"
                android:drawableStart="@drawable/ic_format_list_numbered_black_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_centerVertical="true"/>
            <EditText
                android:layout_width="match_parent"
                style="@style/FormEditTextStyle"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_toEndOf="@+id/addnewitem_drawable_Edition"
                android:hint="@string/addNewItem_Edition"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addnewitem_drawable_isEbook"
                android:drawableStart="@drawable/ic_book_black_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_centerVertical="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toEndOf="@+id/addnewitem_drawable_isEbook">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textSize="22sp"
                    android:text="@string/addnewitem_isEbook"/>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addnewitem_drawable_isPartOfSeries"
                android:drawableStart="@drawable/ic_collections_bookmark_black_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_centerVertical="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toEndOf="@+id/addnewitem_drawable_isPartOfSeries">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textSize="22sp"
                    android:text="@string/addnewitem_ispartofseries"/>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>